Docs: /user/auth/changepw swagger작성
